connector guide page html

--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -8725,205 +8725,205 @@ th {
   visibility: hidden; }
 
 .child-row:nth-child(0) td:nth-child(2) .table-innerbox:after {
-  background: #489b4a; }
+  background: #f2a2ef; }
 .child-row:nth-child(1) td:nth-child(2) .table-innerbox:after {
-  background: #68ba56; }
+  background: #ef2393; }
 .child-row:nth-child(2) td:nth-child(2) .table-innerbox:after {
-  background: #94e7a1; }
+  background: #664bab; }
 .child-row:nth-child(3) td:nth-child(2) .table-innerbox:after {
-  background: #b5f967; }
+  background: #f353ff; }
 .child-row:nth-child(4) td:nth-child(2) .table-innerbox:after {
-  background: #9390bf; }
+  background: #59686c; }
 .child-row:nth-child(5) td:nth-child(2) .table-innerbox:after {
-  background: #16b51e; }
+  background: #39776d; }
 .child-row:nth-child(6) td:nth-child(2) .table-innerbox:after {
-  background: #898fd1; }
+  background: #e9c484; }
 .child-row:nth-child(7) td:nth-child(2) .table-innerbox:after {
-  background: #315cf3; }
+  background: #319b30; }
 .child-row:nth-child(8) td:nth-child(2) .table-innerbox:after {
-  background: #68282b; }
+  background: #786d77; }
 .child-row:nth-child(9) td:nth-child(2) .table-innerbox:after {
-  background: #d17d49; }
+  background: #fbcf7f; }
 .child-row:nth-child(10) td:nth-child(2) .table-innerbox:after {
-  background: #23182c; }
+  background: #8e3494; }
 .child-row:nth-child(11) td:nth-child(2) .table-innerbox:after {
-  background: #efc4a5; }
+  background: #b2dc0a; }
 .child-row:nth-child(12) td:nth-child(2) .table-innerbox:after {
-  background: #425834; }
+  background: #e56a27; }
 .child-row:nth-child(13) td:nth-child(2) .table-innerbox:after {
-  background: #8e78cc; }
+  background: #db9c8a; }
 .child-row:nth-child(14) td:nth-child(2) .table-innerbox:after {
-  background: #e7438b; }
+  background: #e6726c; }
 .child-row:nth-child(15) td:nth-child(2) .table-innerbox:after {
-  background: #b543bd; }
+  background: #6de94e; }
 .child-row:nth-child(16) td:nth-child(2) .table-innerbox:after {
-  background: #9e510c; }
+  background: #18a827; }
 .child-row:nth-child(17) td:nth-child(2) .table-innerbox:after {
-  background: #402e2f; }
+  background: #b7c02b; }
 .child-row:nth-child(18) td:nth-child(2) .table-innerbox:after {
-  background: #cc2d7d; }
+  background: #31a584; }
 .child-row:nth-child(19) td:nth-child(2) .table-innerbox:after {
-  background: #48da89; }
+  background: #ec4e3c; }
 .child-row:nth-child(20) td:nth-child(2) .table-innerbox:after {
-  background: #088715; }
+  background: #06e01b; }
 .child-row:nth-child(21) td:nth-child(2) .table-innerbox:after {
-  background: #ddbd47; }
+  background: #8615b3; }
 .child-row:nth-child(22) td:nth-child(2) .table-innerbox:after {
-  background: #21d6d8; }
+  background: #935a7b; }
 .child-row:nth-child(23) td:nth-child(2) .table-innerbox:after {
-  background: #e434bc; }
+  background: #9e750d; }
 .child-row:nth-child(24) td:nth-child(2) .table-innerbox:after {
-  background: #39408f; }
+  background: #a21991; }
 .child-row:nth-child(25) td:nth-child(2) .table-innerbox:after {
-  background: #f17362; }
+  background: #bb5be7; }
 .child-row:nth-child(26) td:nth-child(2) .table-innerbox:after {
-  background: #3edfcd; }
+  background: #a327a0; }
 .child-row:nth-child(27) td:nth-child(2) .table-innerbox:after {
-  background: #6872af; }
+  background: #a31986; }
 .child-row:nth-child(28) td:nth-child(2) .table-innerbox:after {
-  background: #2d8f3d; }
+  background: #c4f50f; }
 .child-row:nth-child(29) td:nth-child(2) .table-innerbox:after {
-  background: #5b24c1; }
+  background: #a2037b; }
 .child-row:nth-child(30) td:nth-child(2) .table-innerbox:after {
-  background: #fa15dd; }
+  background: #511a33; }
 .child-row:nth-child(31) td:nth-child(2) .table-innerbox:after {
-  background: #45a51f; }
+  background: #525ac4; }
 .child-row:nth-child(32) td:nth-child(2) .table-innerbox:after {
-  background: #ad61c0; }
+  background: #69ee8b; }
 .child-row:nth-child(33) td:nth-child(2) .table-innerbox:after {
-  background: #2bdebf; }
+  background: #be8762; }
 .child-row:nth-child(34) td:nth-child(2) .table-innerbox:after {
-  background: #3671d5; }
+  background: #8cd206; }
 .child-row:nth-child(35) td:nth-child(2) .table-innerbox:after {
-  background: #46ea63; }
+  background: #384d45; }
 .child-row:nth-child(36) td:nth-child(2) .table-innerbox:after {
-  background: #01ce68; }
+  background: #d22043; }
 .child-row:nth-child(37) td:nth-child(2) .table-innerbox:after {
-  background: #583eea; }
+  background: #85b5a4; }
 .child-row:nth-child(38) td:nth-child(2) .table-innerbox:after {
-  background: #053edf; }
+  background: #2182e2; }
 .child-row:nth-child(39) td:nth-child(2) .table-innerbox:after {
-  background: #d387ba; }
+  background: #d82f73; }
 .child-row:nth-child(40) td:nth-child(2) .table-innerbox:after {
-  background: #ee04dd; }
+  background: #3fc526; }
 .child-row:nth-child(41) td:nth-child(2) .table-innerbox:after {
-  background: #78f2ee; }
+  background: #e34413; }
 .child-row:nth-child(42) td:nth-child(2) .table-innerbox:after {
-  background: #0f8111; }
+  background: #d184ff; }
 .child-row:nth-child(43) td:nth-child(2) .table-innerbox:after {
-  background: #c07a0b; }
+  background: #a6c15b; }
 .child-row:nth-child(44) td:nth-child(2) .table-innerbox:after {
-  background: #db4831; }
+  background: #c4bc54; }
 .child-row:nth-child(45) td:nth-child(2) .table-innerbox:after {
-  background: #28dee4; }
+  background: #de6e47; }
 .child-row:nth-child(46) td:nth-child(2) .table-innerbox:after {
-  background: #15bcb0; }
+  background: #537074; }
 .child-row:nth-child(47) td:nth-child(2) .table-innerbox:after {
-  background: #71ce8f; }
+  background: #997133; }
 .child-row:nth-child(48) td:nth-child(2) .table-innerbox:after {
-  background: #bc6a70; }
+  background: #2c4ecd; }
 .child-row:nth-child(49) td:nth-child(2) .table-innerbox:after {
-  background: #6fc776; }
+  background: #9616af; }
 .child-row:nth-child(50) td:nth-child(2) .table-innerbox:after {
-  background: #809d7e; }
+  background: #8cb11f; }
 .child-row:nth-child(51) td:nth-child(2) .table-innerbox:after {
-  background: #96b0ce; }
+  background: #1f21fb; }
 .child-row:nth-child(52) td:nth-child(2) .table-innerbox:after {
-  background: #29687f; }
+  background: #b201a5; }
 .child-row:nth-child(53) td:nth-child(2) .table-innerbox:after {
-  background: #049e0b; }
+  background: #606c95; }
 .child-row:nth-child(54) td:nth-child(2) .table-innerbox:after {
-  background: #d1ab33; }
+  background: #348dc6; }
 .child-row:nth-child(55) td:nth-child(2) .table-innerbox:after {
-  background: #07f82f; }
+  background: #cbc6e0; }
 .child-row:nth-child(56) td:nth-child(2) .table-innerbox:after {
-  background: #6cd24f; }
+  background: #de9e5d; }
 .child-row:nth-child(57) td:nth-child(2) .table-innerbox:after {
-  background: #d0216a; }
+  background: #a31b3b; }
 .child-row:nth-child(58) td:nth-child(2) .table-innerbox:after {
-  background: #a04cff; }
+  background: #1f656e; }
 .child-row:nth-child(59) td:nth-child(2) .table-innerbox:after {
-  background: #d56ed0; }
+  background: #10ce69; }
 .child-row:nth-child(60) td:nth-child(2) .table-innerbox:after {
-  background: #670d76; }
+  background: #aec451; }
 .child-row:nth-child(61) td:nth-child(2) .table-innerbox:after {
-  background: #fe55f1; }
+  background: #c30fca; }
 .child-row:nth-child(62) td:nth-child(2) .table-innerbox:after {
-  background: #6fbc49; }
+  background: #5f0d56; }
 .child-row:nth-child(63) td:nth-child(2) .table-innerbox:after {
-  background: #f42ac5; }
+  background: #4ccd07; }
 .child-row:nth-child(64) td:nth-child(2) .table-innerbox:after {
-  background: #4ad633; }
+  background: #22df19; }
 .child-row:nth-child(65) td:nth-child(2) .table-innerbox:after {
-  background: #892317; }
+  background: #949dda; }
 .child-row:nth-child(66) td:nth-child(2) .table-innerbox:after {
-  background: #1d02f7; }
+  background: #c48ca5; }
 .child-row:nth-child(67) td:nth-child(2) .table-innerbox:after {
-  background: #3e878e; }
+  background: #a0f9a9; }
 .child-row:nth-child(68) td:nth-child(2) .table-innerbox:after {
-  background: #01f6c7; }
+  background: #8c6a07; }
 .child-row:nth-child(69) td:nth-child(2) .table-innerbox:after {
-  background: #090ac4; }
+  background: #8db196; }
 .child-row:nth-child(70) td:nth-child(2) .table-innerbox:after {
-  background: #3458db; }
+  background: #58d2c7; }
 .child-row:nth-child(71) td:nth-child(2) .table-innerbox:after {
-  background: #0a8418; }
+  background: #650c6b; }
 .child-row:nth-child(72) td:nth-child(2) .table-innerbox:after {
-  background: #9d5b82; }
+  background: #07e2fd; }
 .child-row:nth-child(73) td:nth-child(2) .table-innerbox:after {
-  background: #e07a79; }
+  background: #f5d2fb; }
 .child-row:nth-child(74) td:nth-child(2) .table-innerbox:after {
-  background: #6a9b19; }
+  background: #cdc237; }
 .child-row:nth-child(75) td:nth-child(2) .table-innerbox:after {
-  background: #b4bcc8; }
+  background: #7b4ab9; }
 .child-row:nth-child(76) td:nth-child(2) .table-innerbox:after {
-  background: #06cd21; }
+  background: #47b11c; }
 .child-row:nth-child(77) td:nth-child(2) .table-innerbox:after {
-  background: #1bd9d1; }
+  background: #d8c23a; }
 .child-row:nth-child(78) td:nth-child(2) .table-innerbox:after {
-  background: #2e241a; }
+  background: #f0be4d; }
 .child-row:nth-child(79) td:nth-child(2) .table-innerbox:after {
-  background: #c7042b; }
+  background: #4f1b7b; }
 .child-row:nth-child(80) td:nth-child(2) .table-innerbox:after {
-  background: #f4bbe0; }
+  background: #f06014; }
 .child-row:nth-child(81) td:nth-child(2) .table-innerbox:after {
-  background: #bb5880; }
+  background: #497a14; }
 .child-row:nth-child(82) td:nth-child(2) .table-innerbox:after {
-  background: #3b793f; }
+  background: #a184dc; }
 .child-row:nth-child(83) td:nth-child(2) .table-innerbox:after {
-  background: #b2b7d4; }
+  background: #ede559; }
 .child-row:nth-child(84) td:nth-child(2) .table-innerbox:after {
-  background: #4eca58; }
+  background: #279199; }
 .child-row:nth-child(85) td:nth-child(2) .table-innerbox:after {
-  background: #1d57cd; }
+  background: #9a47f0; }
 .child-row:nth-child(86) td:nth-child(2) .table-innerbox:after {
-  background: #4e2956; }
+  background: #cae601; }
 .child-row:nth-child(87) td:nth-child(2) .table-innerbox:after {
-  background: #e4e52e; }
+  background: #5fce52; }
 .child-row:nth-child(88) td:nth-child(2) .table-innerbox:after {
-  background: #8ac9ae; }
+  background: #6648b9; }
 .child-row:nth-child(89) td:nth-child(2) .table-innerbox:after {
-  background: #1ef201; }
+  background: #98fd77; }
 .child-row:nth-child(90) td:nth-child(2) .table-innerbox:after {
-  background: #ec5f7e; }
+  background: #ec0b21; }
 .child-row:nth-child(91) td:nth-child(2) .table-innerbox:after {
-  background: #0f29b1; }
+  background: #32ba8e; }
 .child-row:nth-child(92) td:nth-child(2) .table-innerbox:after {
-  background: #70a7fe; }
+  background: #e1c102; }
 .child-row:nth-child(93) td:nth-child(2) .table-innerbox:after {
-  background: #bfee0f; }
+  background: #a54b71; }
 .child-row:nth-child(94) td:nth-child(2) .table-innerbox:after {
-  background: #6ac802; }
+  background: #83792a; }
 .child-row:nth-child(95) td:nth-child(2) .table-innerbox:after {
-  background: #f8064c; }
+  background: #cbbfda; }
 .child-row:nth-child(96) td:nth-child(2) .table-innerbox:after {
-  background: #8e886e; }
+  background: #764f27; }
 .child-row:nth-child(97) td:nth-child(2) .table-innerbox:after {
-  background: #f11856; }
+  background: #fad894; }
 .child-row:nth-child(98) td:nth-child(2) .table-innerbox:after {
-  background: #e1c162; }
+  background: #9ab349; }
 .child-row:nth-child(99) td:nth-child(2) .table-innerbox:after {
-  background: #c3a939; }
+  background: #6edae1; }
 
 .child-row td:nth-child(2) .table-innerbox {
   position: relative; }
@@ -16880,6 +16880,35 @@ input:not(:checked) + .slider-switch > .switch-non {
   position: inherit;
   top: inherit;
   right: inherit; }
+
+/*guid page css*/
+.title-guide {
+  font-size: 16px;
+  font-weight: 600; }
+
+.guide-table th, .guide-table td {
+  background: #fff;
+  border: 1px solid #9A9A9A;
+  padding: 15px;
+  min-width: 247px; }
+
+.table-wrapper-section table {
+  width: 685px; }
+
+.table-wrapper-section table td {
+  padding: 15px;
+  border: 1px solid #9A9A9A; }
+
+.table-wrapper-section table td strong {
+  color: #4C4C4C; }
+
+.guide-img-border-div {
+  border: 1px solid #9A9A9A;
+  padding: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 683px; }
 
 @media screen and (max-width: 767px) {
   .assets-details-modal-field-row {
