--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -8725,205 +8725,205 @@ th {
   visibility: hidden; }
 
 .child-row:nth-child(0) td:nth-child(2) .table-innerbox:after {
-  background: #f2a2ef; }
+  background: #b85e73; }
 .child-row:nth-child(1) td:nth-child(2) .table-innerbox:after {
-  background: #ef2393; }
+  background: #e8b0fc; }
 .child-row:nth-child(2) td:nth-child(2) .table-innerbox:after {
-  background: #664bab; }
+  background: #9ca71d; }
 .child-row:nth-child(3) td:nth-child(2) .table-innerbox:after {
-  background: #f353ff; }
+  background: #2bfd6c; }
 .child-row:nth-child(4) td:nth-child(2) .table-innerbox:after {
-  background: #59686c; }
+  background: #fb2d42; }
 .child-row:nth-child(5) td:nth-child(2) .table-innerbox:after {
-  background: #39776d; }
+  background: #bb60f5; }
 .child-row:nth-child(6) td:nth-child(2) .table-innerbox:after {
-  background: #e9c484; }
+  background: #da0f75; }
 .child-row:nth-child(7) td:nth-child(2) .table-innerbox:after {
-  background: #319b30; }
+  background: #9faf5c; }
 .child-row:nth-child(8) td:nth-child(2) .table-innerbox:after {
-  background: #786d77; }
+  background: #59905e; }
 .child-row:nth-child(9) td:nth-child(2) .table-innerbox:after {
-  background: #fbcf7f; }
+  background: #b4bc81; }
 .child-row:nth-child(10) td:nth-child(2) .table-innerbox:after {
-  background: #8e3494; }
+  background: #dd0f16; }
 .child-row:nth-child(11) td:nth-child(2) .table-innerbox:after {
-  background: #b2dc0a; }
+  background: #16f0f1; }
 .child-row:nth-child(12) td:nth-child(2) .table-innerbox:after {
-  background: #e56a27; }
+  background: #7c2ad2; }
 .child-row:nth-child(13) td:nth-child(2) .table-innerbox:after {
-  background: #db9c8a; }
+  background: #1dc71a; }
 .child-row:nth-child(14) td:nth-child(2) .table-innerbox:after {
-  background: #e6726c; }
+  background: #c37a25; }
 .child-row:nth-child(15) td:nth-child(2) .table-innerbox:after {
-  background: #6de94e; }
+  background: #862b24; }
 .child-row:nth-child(16) td:nth-child(2) .table-innerbox:after {
-  background: #18a827; }
+  background: #7b20bb; }
 .child-row:nth-child(17) td:nth-child(2) .table-innerbox:after {
-  background: #b7c02b; }
+  background: #92afb9; }
 .child-row:nth-child(18) td:nth-child(2) .table-innerbox:after {
-  background: #31a584; }
+  background: #dcd590; }
 .child-row:nth-child(19) td:nth-child(2) .table-innerbox:after {
-  background: #ec4e3c; }
+  background: #f997b2; }
 .child-row:nth-child(20) td:nth-child(2) .table-innerbox:after {
-  background: #06e01b; }
+  background: #d1c281; }
 .child-row:nth-child(21) td:nth-child(2) .table-innerbox:after {
-  background: #8615b3; }
+  background: #4cd183; }
 .child-row:nth-child(22) td:nth-child(2) .table-innerbox:after {
-  background: #935a7b; }
+  background: #fa8bb5; }
 .child-row:nth-child(23) td:nth-child(2) .table-innerbox:after {
-  background: #9e750d; }
+  background: #076349; }
 .child-row:nth-child(24) td:nth-child(2) .table-innerbox:after {
-  background: #a21991; }
+  background: #eb2d8d; }
 .child-row:nth-child(25) td:nth-child(2) .table-innerbox:after {
-  background: #bb5be7; }
+  background: #f1fa30; }
 .child-row:nth-child(26) td:nth-child(2) .table-innerbox:after {
-  background: #a327a0; }
+  background: #88e360; }
 .child-row:nth-child(27) td:nth-child(2) .table-innerbox:after {
-  background: #a31986; }
+  background: #9dd34e; }
 .child-row:nth-child(28) td:nth-child(2) .table-innerbox:after {
-  background: #c4f50f; }
+  background: #6aa742; }
 .child-row:nth-child(29) td:nth-child(2) .table-innerbox:after {
-  background: #a2037b; }
+  background: #d7b45c; }
 .child-row:nth-child(30) td:nth-child(2) .table-innerbox:after {
-  background: #511a33; }
+  background: #cad277; }
 .child-row:nth-child(31) td:nth-child(2) .table-innerbox:after {
-  background: #525ac4; }
+  background: #2855e9; }
 .child-row:nth-child(32) td:nth-child(2) .table-innerbox:after {
-  background: #69ee8b; }
+  background: #7b93dd; }
 .child-row:nth-child(33) td:nth-child(2) .table-innerbox:after {
-  background: #be8762; }
+  background: #bcb137; }
 .child-row:nth-child(34) td:nth-child(2) .table-innerbox:after {
-  background: #8cd206; }
+  background: #9584e6; }
 .child-row:nth-child(35) td:nth-child(2) .table-innerbox:after {
-  background: #384d45; }
+  background: #d5eefc; }
 .child-row:nth-child(36) td:nth-child(2) .table-innerbox:after {
-  background: #d22043; }
+  background: #a79f7c; }
 .child-row:nth-child(37) td:nth-child(2) .table-innerbox:after {
-  background: #85b5a4; }
+  background: #73d245; }
 .child-row:nth-child(38) td:nth-child(2) .table-innerbox:after {
-  background: #2182e2; }
+  background: #1981c9; }
 .child-row:nth-child(39) td:nth-child(2) .table-innerbox:after {
-  background: #d82f73; }
+  background: #19ea02; }
 .child-row:nth-child(40) td:nth-child(2) .table-innerbox:after {
-  background: #3fc526; }
+  background: #a62dec; }
 .child-row:nth-child(41) td:nth-child(2) .table-innerbox:after {
-  background: #e34413; }
+  background: #e03741; }
 .child-row:nth-child(42) td:nth-child(2) .table-innerbox:after {
-  background: #d184ff; }
+  background: #f1372e; }
 .child-row:nth-child(43) td:nth-child(2) .table-innerbox:after {
-  background: #a6c15b; }
+  background: #2beb9f; }
 .child-row:nth-child(44) td:nth-child(2) .table-innerbox:after {
-  background: #c4bc54; }
+  background: #5088c4; }
 .child-row:nth-child(45) td:nth-child(2) .table-innerbox:after {
-  background: #de6e47; }
+  background: #a62f11; }
 .child-row:nth-child(46) td:nth-child(2) .table-innerbox:after {
-  background: #537074; }
+  background: #843197; }
 .child-row:nth-child(47) td:nth-child(2) .table-innerbox:after {
-  background: #997133; }
+  background: #e14fda; }
 .child-row:nth-child(48) td:nth-child(2) .table-innerbox:after {
-  background: #2c4ecd; }
+  background: #139d57; }
 .child-row:nth-child(49) td:nth-child(2) .table-innerbox:after {
-  background: #9616af; }
+  background: #23c906; }
 .child-row:nth-child(50) td:nth-child(2) .table-innerbox:after {
-  background: #8cb11f; }
+  background: #d81d1a; }
 .child-row:nth-child(51) td:nth-child(2) .table-innerbox:after {
-  background: #1f21fb; }
+  background: #8355a5; }
 .child-row:nth-child(52) td:nth-child(2) .table-innerbox:after {
-  background: #b201a5; }
+  background: #4aef79; }
 .child-row:nth-child(53) td:nth-child(2) .table-innerbox:after {
-  background: #606c95; }
+  background: #6b8521; }
 .child-row:nth-child(54) td:nth-child(2) .table-innerbox:after {
-  background: #348dc6; }
+  background: #836d29; }
 .child-row:nth-child(55) td:nth-child(2) .table-innerbox:after {
-  background: #cbc6e0; }
+  background: #7e4556; }
 .child-row:nth-child(56) td:nth-child(2) .table-innerbox:after {
-  background: #de9e5d; }
+  background: #6e2586; }
 .child-row:nth-child(57) td:nth-child(2) .table-innerbox:after {
-  background: #a31b3b; }
+  background: #a9bb2e; }
 .child-row:nth-child(58) td:nth-child(2) .table-innerbox:after {
-  background: #1f656e; }
+  background: #15cd76; }
 .child-row:nth-child(59) td:nth-child(2) .table-innerbox:after {
-  background: #10ce69; }
+  background: #330357; }
 .child-row:nth-child(60) td:nth-child(2) .table-innerbox:after {
-  background: #aec451; }
+  background: #219877; }
 .child-row:nth-child(61) td:nth-child(2) .table-innerbox:after {
-  background: #c30fca; }
+  background: #f486f1; }
 .child-row:nth-child(62) td:nth-child(2) .table-innerbox:after {
-  background: #5f0d56; }
+  background: #573f22; }
 .child-row:nth-child(63) td:nth-child(2) .table-innerbox:after {
-  background: #4ccd07; }
+  background: #39ab4e; }
 .child-row:nth-child(64) td:nth-child(2) .table-innerbox:after {
-  background: #22df19; }
+  background: #b75cc4; }
 .child-row:nth-child(65) td:nth-child(2) .table-innerbox:after {
-  background: #949dda; }
+  background: #7104fc; }
 .child-row:nth-child(66) td:nth-child(2) .table-innerbox:after {
-  background: #c48ca5; }
+  background: #df71f5; }
 .child-row:nth-child(67) td:nth-child(2) .table-innerbox:after {
-  background: #a0f9a9; }
+  background: #4d3fdb; }
 .child-row:nth-child(68) td:nth-child(2) .table-innerbox:after {
-  background: #8c6a07; }
+  background: #431386; }
 .child-row:nth-child(69) td:nth-child(2) .table-innerbox:after {
-  background: #8db196; }
+  background: #602d5c; }
 .child-row:nth-child(70) td:nth-child(2) .table-innerbox:after {
-  background: #58d2c7; }
+  background: #d8133a; }
 .child-row:nth-child(71) td:nth-child(2) .table-innerbox:after {
-  background: #650c6b; }
+  background: #7f32b5; }
 .child-row:nth-child(72) td:nth-child(2) .table-innerbox:after {
-  background: #07e2fd; }
+  background: #38c94d; }
 .child-row:nth-child(73) td:nth-child(2) .table-innerbox:after {
-  background: #f5d2fb; }
+  background: #e84e93; }
 .child-row:nth-child(74) td:nth-child(2) .table-innerbox:after {
-  background: #cdc237; }
+  background: #61ba97; }
 .child-row:nth-child(75) td:nth-child(2) .table-innerbox:after {
-  background: #7b4ab9; }
+  background: #eb900d; }
 .child-row:nth-child(76) td:nth-child(2) .table-innerbox:after {
-  background: #47b11c; }
+  background: #2ef9a3; }
 .child-row:nth-child(77) td:nth-child(2) .table-innerbox:after {
-  background: #d8c23a; }
+  background: #5d4569; }
 .child-row:nth-child(78) td:nth-child(2) .table-innerbox:after {
-  background: #f0be4d; }
+  background: #096a81; }
 .child-row:nth-child(79) td:nth-child(2) .table-innerbox:after {
-  background: #4f1b7b; }
+  background: #82a875; }
 .child-row:nth-child(80) td:nth-child(2) .table-innerbox:after {
-  background: #f06014; }
+  background: #d7184a; }
 .child-row:nth-child(81) td:nth-child(2) .table-innerbox:after {
-  background: #497a14; }
+  background: #be8143; }
 .child-row:nth-child(82) td:nth-child(2) .table-innerbox:after {
-  background: #a184dc; }
+  background: #dedc07; }
 .child-row:nth-child(83) td:nth-child(2) .table-innerbox:after {
-  background: #ede559; }
+  background: #d8a166; }
 .child-row:nth-child(84) td:nth-child(2) .table-innerbox:after {
-  background: #279199; }
+  background: #ff562f; }
 .child-row:nth-child(85) td:nth-child(2) .table-innerbox:after {
-  background: #9a47f0; }
+  background: #69dbe9; }
 .child-row:nth-child(86) td:nth-child(2) .table-innerbox:after {
-  background: #cae601; }
+  background: #489bbc; }
 .child-row:nth-child(87) td:nth-child(2) .table-innerbox:after {
-  background: #5fce52; }
+  background: #561c47; }
 .child-row:nth-child(88) td:nth-child(2) .table-innerbox:after {
-  background: #6648b9; }
+  background: #e8853b; }
 .child-row:nth-child(89) td:nth-child(2) .table-innerbox:after {
-  background: #98fd77; }
+  background: #a4daa9; }
 .child-row:nth-child(90) td:nth-child(2) .table-innerbox:after {
-  background: #ec0b21; }
+  background: #8e69d0; }
 .child-row:nth-child(91) td:nth-child(2) .table-innerbox:after {
-  background: #32ba8e; }
+  background: #876fd8; }
 .child-row:nth-child(92) td:nth-child(2) .table-innerbox:after {
-  background: #e1c102; }
+  background: #54bca9; }
 .child-row:nth-child(93) td:nth-child(2) .table-innerbox:after {
-  background: #a54b71; }
+  background: #a27f83; }
 .child-row:nth-child(94) td:nth-child(2) .table-innerbox:after {
-  background: #83792a; }
+  background: #5ea865; }
 .child-row:nth-child(95) td:nth-child(2) .table-innerbox:after {
-  background: #cbbfda; }
+  background: #3d6e10; }
 .child-row:nth-child(96) td:nth-child(2) .table-innerbox:after {
-  background: #764f27; }
+  background: #b36946; }
 .child-row:nth-child(97) td:nth-child(2) .table-innerbox:after {
-  background: #fad894; }
+  background: #3ddc4c; }
 .child-row:nth-child(98) td:nth-child(2) .table-innerbox:after {
-  background: #9ab349; }
+  background: #065938; }
 .child-row:nth-child(99) td:nth-child(2) .table-innerbox:after {
-  background: #6edae1; }
+  background: #83ef81; }
 
 .child-row td:nth-child(2) .table-innerbox {
   position: relative; }
@@ -16893,7 +16893,7 @@ input:not(:checked) + .slider-switch > .switch-non {
   min-width: 247px; }
 
 .table-wrapper-section table {
-  width: 685px; }
+  width: 100%; }
 
 .table-wrapper-section table td {
   padding: 15px;
@@ -16908,7 +16908,11 @@ input:not(:checked) + .slider-switch > .switch-non {
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 683px; }
+  width: 100%; }
+
+.guide-img-border-div img {
+  width: 100%;
+  height: 50vh; }
 
 @media screen and (max-width: 767px) {
   .assets-details-modal-field-row {
