--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -8725,205 +8725,205 @@ th {
   visibility: hidden; }
 
 .child-row:nth-child(0) td:nth-child(2) .table-innerbox:after {
-  background: #b85e73; }
+  background: #7147d8; }
 .child-row:nth-child(1) td:nth-child(2) .table-innerbox:after {
-  background: #e8b0fc; }
+  background: #399099; }
 .child-row:nth-child(2) td:nth-child(2) .table-innerbox:after {
-  background: #9ca71d; }
+  background: #af895e; }
 .child-row:nth-child(3) td:nth-child(2) .table-innerbox:after {
-  background: #2bfd6c; }
+  background: #cc65e6; }
 .child-row:nth-child(4) td:nth-child(2) .table-innerbox:after {
-  background: #fb2d42; }
+  background: #89dd70; }
 .child-row:nth-child(5) td:nth-child(2) .table-innerbox:after {
-  background: #bb60f5; }
+  background: #e3fbfc; }
 .child-row:nth-child(6) td:nth-child(2) .table-innerbox:after {
-  background: #da0f75; }
+  background: #43b945; }
 .child-row:nth-child(7) td:nth-child(2) .table-innerbox:after {
-  background: #9faf5c; }
+  background: #13c9bf; }
 .child-row:nth-child(8) td:nth-child(2) .table-innerbox:after {
-  background: #59905e; }
+  background: #e27775; }
 .child-row:nth-child(9) td:nth-child(2) .table-innerbox:after {
-  background: #b4bc81; }
+  background: #d9e30a; }
 .child-row:nth-child(10) td:nth-child(2) .table-innerbox:after {
-  background: #dd0f16; }
+  background: #d7c3fe; }
 .child-row:nth-child(11) td:nth-child(2) .table-innerbox:after {
-  background: #16f0f1; }
+  background: #d09cb3; }
 .child-row:nth-child(12) td:nth-child(2) .table-innerbox:after {
-  background: #7c2ad2; }
+  background: #8aeb57; }
 .child-row:nth-child(13) td:nth-child(2) .table-innerbox:after {
-  background: #1dc71a; }
+  background: #3eb6a7; }
 .child-row:nth-child(14) td:nth-child(2) .table-innerbox:after {
-  background: #c37a25; }
+  background: #0c8c19; }
 .child-row:nth-child(15) td:nth-child(2) .table-innerbox:after {
-  background: #862b24; }
+  background: #7a25d2; }
 .child-row:nth-child(16) td:nth-child(2) .table-innerbox:after {
-  background: #7b20bb; }
+  background: #922bff; }
 .child-row:nth-child(17) td:nth-child(2) .table-innerbox:after {
-  background: #92afb9; }
+  background: #b427cb; }
 .child-row:nth-child(18) td:nth-child(2) .table-innerbox:after {
-  background: #dcd590; }
+  background: #17136d; }
 .child-row:nth-child(19) td:nth-child(2) .table-innerbox:after {
-  background: #f997b2; }
+  background: #d0065b; }
 .child-row:nth-child(20) td:nth-child(2) .table-innerbox:after {
-  background: #d1c281; }
+  background: #df6bce; }
 .child-row:nth-child(21) td:nth-child(2) .table-innerbox:after {
-  background: #4cd183; }
+  background: #12c74e; }
 .child-row:nth-child(22) td:nth-child(2) .table-innerbox:after {
-  background: #fa8bb5; }
+  background: #4de98a; }
 .child-row:nth-child(23) td:nth-child(2) .table-innerbox:after {
-  background: #076349; }
+  background: #28a7d6; }
 .child-row:nth-child(24) td:nth-child(2) .table-innerbox:after {
-  background: #eb2d8d; }
+  background: #e37d55; }
 .child-row:nth-child(25) td:nth-child(2) .table-innerbox:after {
-  background: #f1fa30; }
+  background: #c1f877; }
 .child-row:nth-child(26) td:nth-child(2) .table-innerbox:after {
-  background: #88e360; }
+  background: #29053f; }
 .child-row:nth-child(27) td:nth-child(2) .table-innerbox:after {
-  background: #9dd34e; }
+  background: #a80190; }
 .child-row:nth-child(28) td:nth-child(2) .table-innerbox:after {
-  background: #6aa742; }
+  background: #8ea10c; }
 .child-row:nth-child(29) td:nth-child(2) .table-innerbox:after {
-  background: #d7b45c; }
+  background: #26ffdb; }
 .child-row:nth-child(30) td:nth-child(2) .table-innerbox:after {
-  background: #cad277; }
+  background: #1f4bbb; }
 .child-row:nth-child(31) td:nth-child(2) .table-innerbox:after {
-  background: #2855e9; }
+  background: #e9056e; }
 .child-row:nth-child(32) td:nth-child(2) .table-innerbox:after {
-  background: #7b93dd; }
+  background: #a9f96e; }
 .child-row:nth-child(33) td:nth-child(2) .table-innerbox:after {
-  background: #bcb137; }
+  background: #793656; }
 .child-row:nth-child(34) td:nth-child(2) .table-innerbox:after {
-  background: #9584e6; }
+  background: #ac2228; }
 .child-row:nth-child(35) td:nth-child(2) .table-innerbox:after {
-  background: #d5eefc; }
+  background: #99cdba; }
 .child-row:nth-child(36) td:nth-child(2) .table-innerbox:after {
-  background: #a79f7c; }
+  background: #d1c5e6; }
 .child-row:nth-child(37) td:nth-child(2) .table-innerbox:after {
-  background: #73d245; }
+  background: #6d0a88; }
 .child-row:nth-child(38) td:nth-child(2) .table-innerbox:after {
-  background: #1981c9; }
+  background: #723ddb; }
 .child-row:nth-child(39) td:nth-child(2) .table-innerbox:after {
-  background: #19ea02; }
+  background: #99c39b; }
 .child-row:nth-child(40) td:nth-child(2) .table-innerbox:after {
-  background: #a62dec; }
+  background: #757171; }
 .child-row:nth-child(41) td:nth-child(2) .table-innerbox:after {
-  background: #e03741; }
+  background: #2defc3; }
 .child-row:nth-child(42) td:nth-child(2) .table-innerbox:after {
-  background: #f1372e; }
+  background: #c7cc78; }
 .child-row:nth-child(43) td:nth-child(2) .table-innerbox:after {
-  background: #2beb9f; }
+  background: #a4dfb3; }
 .child-row:nth-child(44) td:nth-child(2) .table-innerbox:after {
-  background: #5088c4; }
+  background: #3f38c8; }
 .child-row:nth-child(45) td:nth-child(2) .table-innerbox:after {
-  background: #a62f11; }
+  background: #5a4f18; }
 .child-row:nth-child(46) td:nth-child(2) .table-innerbox:after {
-  background: #843197; }
+  background: #572870; }
 .child-row:nth-child(47) td:nth-child(2) .table-innerbox:after {
-  background: #e14fda; }
+  background: #763649; }
 .child-row:nth-child(48) td:nth-child(2) .table-innerbox:after {
-  background: #139d57; }
+  background: #fa6d97; }
 .child-row:nth-child(49) td:nth-child(2) .table-innerbox:after {
-  background: #23c906; }
+  background: #48a30d; }
 .child-row:nth-child(50) td:nth-child(2) .table-innerbox:after {
-  background: #d81d1a; }
+  background: #645267; }
 .child-row:nth-child(51) td:nth-child(2) .table-innerbox:after {
-  background: #8355a5; }
+  background: #148445; }
 .child-row:nth-child(52) td:nth-child(2) .table-innerbox:after {
-  background: #4aef79; }
+  background: #b4d005; }
 .child-row:nth-child(53) td:nth-child(2) .table-innerbox:after {
-  background: #6b8521; }
+  background: #039fe6; }
 .child-row:nth-child(54) td:nth-child(2) .table-innerbox:after {
-  background: #836d29; }
+  background: #5f8f4b; }
 .child-row:nth-child(55) td:nth-child(2) .table-innerbox:after {
-  background: #7e4556; }
+  background: #050d61; }
 .child-row:nth-child(56) td:nth-child(2) .table-innerbox:after {
-  background: #6e2586; }
+  background: #a92b31; }
 .child-row:nth-child(57) td:nth-child(2) .table-innerbox:after {
-  background: #a9bb2e; }
+  background: #685021; }
 .child-row:nth-child(58) td:nth-child(2) .table-innerbox:after {
-  background: #15cd76; }
+  background: #a80764; }
 .child-row:nth-child(59) td:nth-child(2) .table-innerbox:after {
-  background: #330357; }
+  background: #8723cb; }
 .child-row:nth-child(60) td:nth-child(2) .table-innerbox:after {
-  background: #219877; }
+  background: #cb88b7; }
 .child-row:nth-child(61) td:nth-child(2) .table-innerbox:after {
-  background: #f486f1; }
+  background: #d927a6; }
 .child-row:nth-child(62) td:nth-child(2) .table-innerbox:after {
-  background: #573f22; }
+  background: #01e16d; }
 .child-row:nth-child(63) td:nth-child(2) .table-innerbox:after {
-  background: #39ab4e; }
+  background: #3c7749; }
 .child-row:nth-child(64) td:nth-child(2) .table-innerbox:after {
-  background: #b75cc4; }
+  background: #2aa207; }
 .child-row:nth-child(65) td:nth-child(2) .table-innerbox:after {
-  background: #7104fc; }
+  background: #148a1f; }
 .child-row:nth-child(66) td:nth-child(2) .table-innerbox:after {
-  background: #df71f5; }
+  background: #e1989f; }
 .child-row:nth-child(67) td:nth-child(2) .table-innerbox:after {
-  background: #4d3fdb; }
+  background: #ae404f; }
 .child-row:nth-child(68) td:nth-child(2) .table-innerbox:after {
-  background: #431386; }
+  background: #17cf72; }
 .child-row:nth-child(69) td:nth-child(2) .table-innerbox:after {
-  background: #602d5c; }
+  background: #85e727; }
 .child-row:nth-child(70) td:nth-child(2) .table-innerbox:after {
-  background: #d8133a; }
+  background: #51f971; }
 .child-row:nth-child(71) td:nth-child(2) .table-innerbox:after {
-  background: #7f32b5; }
+  background: #0b3369; }
 .child-row:nth-child(72) td:nth-child(2) .table-innerbox:after {
-  background: #38c94d; }
+  background: #6e6eea; }
 .child-row:nth-child(73) td:nth-child(2) .table-innerbox:after {
-  background: #e84e93; }
+  background: #8bb9ac; }
 .child-row:nth-child(74) td:nth-child(2) .table-innerbox:after {
-  background: #61ba97; }
+  background: #c93173; }
 .child-row:nth-child(75) td:nth-child(2) .table-innerbox:after {
-  background: #eb900d; }
+  background: #f28d2d; }
 .child-row:nth-child(76) td:nth-child(2) .table-innerbox:after {
-  background: #2ef9a3; }
+  background: #b0fd36; }
 .child-row:nth-child(77) td:nth-child(2) .table-innerbox:after {
-  background: #5d4569; }
+  background: #710e67; }
 .child-row:nth-child(78) td:nth-child(2) .table-innerbox:after {
-  background: #096a81; }
+  background: #9f6de3; }
 .child-row:nth-child(79) td:nth-child(2) .table-innerbox:after {
-  background: #82a875; }
+  background: #04fbef; }
 .child-row:nth-child(80) td:nth-child(2) .table-innerbox:after {
-  background: #d7184a; }
+  background: #4d22da; }
 .child-row:nth-child(81) td:nth-child(2) .table-innerbox:after {
-  background: #be8143; }
+  background: #23b4f7; }
 .child-row:nth-child(82) td:nth-child(2) .table-innerbox:after {
-  background: #dedc07; }
+  background: #38c91a; }
 .child-row:nth-child(83) td:nth-child(2) .table-innerbox:after {
-  background: #d8a166; }
+  background: #d1ead8; }
 .child-row:nth-child(84) td:nth-child(2) .table-innerbox:after {
-  background: #ff562f; }
+  background: #402344; }
 .child-row:nth-child(85) td:nth-child(2) .table-innerbox:after {
-  background: #69dbe9; }
+  background: #05e52e; }
 .child-row:nth-child(86) td:nth-child(2) .table-innerbox:after {
-  background: #489bbc; }
+  background: #1978b2; }
 .child-row:nth-child(87) td:nth-child(2) .table-innerbox:after {
-  background: #561c47; }
+  background: #a94fd2; }
 .child-row:nth-child(88) td:nth-child(2) .table-innerbox:after {
-  background: #e8853b; }
+  background: #5b48cb; }
 .child-row:nth-child(89) td:nth-child(2) .table-innerbox:after {
-  background: #a4daa9; }
+  background: #ceb82d; }
 .child-row:nth-child(90) td:nth-child(2) .table-innerbox:after {
-  background: #8e69d0; }
+  background: #b30621; }
 .child-row:nth-child(91) td:nth-child(2) .table-innerbox:after {
-  background: #876fd8; }
+  background: #f77b6b; }
 .child-row:nth-child(92) td:nth-child(2) .table-innerbox:after {
-  background: #54bca9; }
+  background: #162da7; }
 .child-row:nth-child(93) td:nth-child(2) .table-innerbox:after {
-  background: #a27f83; }
+  background: #18d51c; }
 .child-row:nth-child(94) td:nth-child(2) .table-innerbox:after {
-  background: #5ea865; }
+  background: #428463; }
 .child-row:nth-child(95) td:nth-child(2) .table-innerbox:after {
-  background: #3d6e10; }
+  background: #4a36ac; }
 .child-row:nth-child(96) td:nth-child(2) .table-innerbox:after {
-  background: #b36946; }
+  background: #ffce52; }
 .child-row:nth-child(97) td:nth-child(2) .table-innerbox:after {
-  background: #3ddc4c; }
+  background: #c1d5e1; }
 .child-row:nth-child(98) td:nth-child(2) .table-innerbox:after {
-  background: #065938; }
+  background: #4fc2df; }
 .child-row:nth-child(99) td:nth-child(2) .table-innerbox:after {
-  background: #83ef81; }
+  background: #b718ce; }
 
 .child-row td:nth-child(2) .table-innerbox {
   position: relative; }
@@ -17367,7 +17367,13 @@ input:not(:checked) + .slider-switch > .switch-non {
   .tow-boxs-div {
     grid-template-columns: repeat(auto-fit, minmax(265px, 1fr)); }
     .tow-boxs-div .box-div .box-img img {
-      width: 210px; } }
+      width: 210px; }
+
+  .guide-table th, .guide-table td {
+    min-width: 100%; }
+
+  .table-wrapper-section table td {
+    font-size: 14px; } }
 /*767 screen end here*/
 /*768 to 1023 screen css*/
 @media only screen and (min-width: 768px) and (max-width: 1023px) {
